bug fix of edit options, overlaps of nodes, edges of same origin and end

--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,7 @@
   color: #435585;
 }
 
-ul,
-span {
-  color: #000;
-}
+
 
 [data-testid="stMarkdownContainer"] > p {
   color: #fff;
